--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/passport": "^8.0",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0"
     },
